# seekerofsources

./: .gitignore  CMakeLists.txt  Developers.md  README.md
include/: SData.hpp  SDataBatch.hpp  SGraph.hpp  SHiddenLayer.hpp  SSData.hpp  SSDataBatch.hpp  SSGraph.hpp  SSTrainer.hpp  STrainer.hpp
py/: SData.py  SDataBatch.py  SGraph.py  SHiddenLayer.py  STrainer.py
sosources/: SData.py  SDataBatch.py  SGraph.py  SHiddenLayer.py  STrainer.py  SVarTypes.py  __init__.py
src/: CMakeLists.txt  SData.cpp  SDataBatch.cpp  SGraph.cpp  SHiddenLayer.cpp  SSData.cpp  SSDataBatch.cpp  SSGraph.cpp  SSTrainer.cpp  STrainer.cpp
tutorial/: Guide.md
tutorial/scripts/: sstut_001.cpp  sstut_001.py
